# example_package

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
example_package/assets/conf/: config.py
example_package/core/data_processing/: pipeline.py
example_package/test/test_data_processing/: conftest.py  test_pipeline.py
src/example_package/: __init__.py
src/example_package/assets/conf/: config.py
src/example_package/assets/model/: model.pkl
src/example_package/core/data_processing/: functions.py  pipeline.py
src/example_package/core/model/: model.py
src/example_package/test/test_data_processing/: conftest.py  test_functions.py  test_pipeline.py
